[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognis-ssltriage"
version = "0.1.0"
description = "Grade TLS config (protocols/ciphers/expiry) from openssl/sslyze output"
authors = [{name = "Cognis Digital", email = "suite@cognis.digital"}]
license = {text = "LicenseRef-COCL-1.0"}
requires-python = ">=3.10"
readme = "README.md"
keywords = ["cognis-digital", "cognis-neural-suite", "tactical", "ssltriage"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://cognis.digital"
Repository = "https://github.com/cognis-digital/ssltriage"

[project.scripts]
ssltriage = "ssltriage.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["ssltriage"]
